--- a/_config.yml
+++ b/_config.yml
@@ -22,3 +22,6 @@ github:
   repo:           https://github.com/mrdanbrooks/mrdanbrooks.github.io
 
 gems: [tag_gen]
+
+tag_page_layout: tag_page
+tag_page_dir: tag
