--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,8 @@ relative_permalinks: true
 # Setup
 title:            And now for something completely different
 tagline:          Bean Dip!
-url:              http://weaselpipe.com #http://mrdanbrooks.github.io
+url:              http://localhost:4000 #http://weaselpipe.com #http://mrdanbrooks.github.io
 paginate:         5
-baseurl:          weaselpipe.com/ #http://mrdanbrooks.github.io/
 author:
   name:           Dan Brooks
   url:            http://danbrooks.net
