--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ pygments:         true
 
 # Permalinks
 permalink:        pretty
-relative_permalinks: true
+#relative_permalinks: true
 
 # Setup
 title:            And now for something completely different
