switching out pygments to Rouge. I hate ruby

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 # Dependencies
 markdown:         kramdown
-pygments:         true
+#pygments:         true
+Rouge:         true
 
 # Permalinks
 permalink:        pretty
