fixes from running local debug server

--- a/_config.yml
+++ b/_config.yml
@@ -22,4 +22,4 @@ author:
 version:          1.0.0
 github:
   repo:           https://github.com/mrdanbrooks/mrdanbrooks.github.io
-
+gems: [jekyll-paginate]
