adds custom icons to be defined for front page

--- a/_data/icons.yml
+++ b/_data/icons.yml
@@ -1,3 +1,9 @@
+- category: notes
+  icon: file-text
+
+- category: projects
+  icon: rocket
+
 - category: programming
   icon: code
 
@@ -9,6 +15,3 @@
 
 - category: random
   icon: beer
-
-- category: projects
-  icon: rocket
